--- a/WorkerService.Image.Receiver/WorkerService.Image.Receiver.csproj
+++ b/WorkerService.Image.Receiver/WorkerService.Image.Receiver.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Common.Core.DependencyInjection\Common.Core.DependencyInjection.csproj" />
-    <ProjectReference Include="..\Domain.Service\Domain.Service.csproj" />
+    <ProjectReference Include="..\Domain.Service\Domain.Services.csproj" />
     <ProjectReference Include="..\Infrastructure.Data.SqlServer\Infrastructure.Data.SqlServer.csproj" />
   </ItemGroup>
 </Project>
