--- a/WorkerService.Image.Receiver/WorkerService.Image.Receiver.csproj
+++ b/WorkerService.Image.Receiver/WorkerService.Image.Receiver.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Worker">
+﻿<Project Sdk="Microsoft.NET.Sdk.Worker">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -11,7 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Application.Services\Application.Services.csproj" />
+    <ProjectReference Include="..\Application.WorkerService\Application.WorkerService.csproj" />
     <ProjectReference Include="..\Common.Core.DependencyInjection\Common.Core.DependencyInjection.csproj" />
+    <ProjectReference Include="..\Common.Core.TcpServer\Common.Core.TcpServer.csproj" />
     <ProjectReference Include="..\Domain.Service\Domain.Services.csproj" />
     <ProjectReference Include="..\Infrastructure.Data.SqlServer\Infrastructure.Data.SqlServer.csproj" />
   </ItemGroup>
