--- a/Presentation.Mvc/appsettings.json
+++ b/Presentation.Mvc/appsettings.json
@@ -5,7 +5,11 @@
     }
   },
   "ConnectionStrings": {
-    "CorrectIt": "Data Source=MS-201909281057\\SQLEXPRESS;Initial Catalog=CorrectIt;Persist Security Info=True;User ID=jayshi;Password=sdl@1215"
+    "CorrectIt": "Data Source=MS-201909281057\\SQLEXPRESS;Initial Catalog=CorrectIt;Persist Security Info=True;User ID=jayshi;Password=sdl@1215",
+    "CorrectItWeb": "server=182.61.37.221;database=CorrectIt;uid=sdlfly2000;password=sdl@1215;"
   },
+
+  "server.urls": "http://localhost:5501;",
+
   "AllowedHosts": "*"
 }
