--- a/WorkerService.Image.Receiver/WorkerService.Image.Receiver.csproj
+++ b/WorkerService.Image.Receiver/WorkerService.Image.Receiver.csproj
@@ -6,8 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.3" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,6 +17,6 @@
     <ProjectReference Include="..\Common.Core.DependencyInjection\Common.Core.DependencyInjection.csproj" />
     <ProjectReference Include="..\Common.Core.TcpServer\Common.Core.TcpServer.csproj" />
     <ProjectReference Include="..\Domain.Service\Domain.Services.csproj" />
-    <ProjectReference Include="..\Infrastructure.Data.SqlServer\Infrastructure.Data.SqlServer.csproj" />
+    <ProjectReference Include="..\Infrastructure.Data.SqlServer\Infrastructure.Data.Sql.csproj" />
   </ItemGroup>
 </Project>
