--- a/WorkerService.Image.Receiver/WorkerService.Image.Receiver.csproj
+++ b/WorkerService.Image.Receiver/WorkerService.Image.Receiver.csproj
@@ -17,6 +17,6 @@
     <ProjectReference Include="..\Common.Core.DependencyInjection\Common.Core.DependencyInjection.csproj" />
     <ProjectReference Include="..\Common.Core.TcpServer\Common.Core.TcpServer.csproj" />
     <ProjectReference Include="..\Domain.Service\Domain.Services.csproj" />
-    <ProjectReference Include="..\Infrastructure.Data.SqlServer\Infrastructure.Data.Sql.csproj" />
+    <ProjectReference Include="..\Infrastructure.Data.Sql\Infrastructure.Data.Sql.csproj" />
   </ItemGroup>
 </Project>
