--- a/Domain.Service/Domain.Services.csproj
+++ b/Domain.Service/Domain.Services.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Folder Include="Exercises\Gateways\Persistors\" />
     <Folder Include="Exercises\Gateways\Persistors\Synchronizers\" />
+    <Folder Include="QuestionImages\Gateways\Persistors\" />
   </ItemGroup>
 
   <ItemGroup>
