Refactored with Repository

--- a/Infrastructure.Data.Sql/Infrastructure.Data.Sql.csproj
+++ b/Infrastructure.Data.Sql/Infrastructure.Data.Sql.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Common.Core.Data.Sql\Common.Core.Data.Sql.csproj" />
     <ProjectReference Include="..\Common.Core.DependencyInjection\Common.Core.DependencyInjection.csproj" />
   </ItemGroup>
 
