--- a/Application.WorkerService/Application.WorkerService.csproj
+++ b/Application.WorkerService/Application.WorkerService.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Common.Core.DependencyInjection\Common.Core.DependencyInjection.csproj" />
     <ProjectReference Include="..\Common.Core.TcpServer\Common.Core.TcpServer.csproj" />
+    <ProjectReference Include="..\Domain.Service\Domain.Services.csproj" />
   </ItemGroup>
 
 </Project>
