https://gitee.com/sdlfly2000/CorrectIt/issues/I1I0KN

--- a/Domain.Service/Domain.Services.csproj
+++ b/Domain.Service/Domain.Services.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Common.Core.DependencyInjection\Common.Core.DependencyInjection.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\Infrastructure.Data.File\Infrastructure.Data.File.csproj" />
     <ProjectReference Include="..\Infrastructure.Data.Sql\Infrastructure.Data.Sql.csproj" />
   </ItemGroup>
 
