--- a/Infrastructure.Data.File/Infrastructure.Data.File.csproj
+++ b/Infrastructure.Data.File/Infrastructure.Data.File.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Common.Core.DependencyInjection\Common.Core.DependencyInjection.csproj" />
   </ItemGroup>
 
