--- a/Infrastructure.Data.File/Infrastructure.Data.File.csproj
+++ b/Infrastructure.Data.File/Infrastructure.Data.File.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="OpenCvSharp4" Version="4.3.0.20200524" />
+    <PackageReference Include="OpenCvSharp4.runtime.ubuntu.18.04-x64" Version="4.3.0.20200524" />
+    <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.3.0.20200524" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 
