--- a/Presentation.Mvc/ClientApp/package.json
+++ b/Presentation.Mvc/ClientApp/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.0.0",
+    "@angular/animations": "^8.0.0",
     "@angular/common": "8.0.0",
     "@angular/compiler": "8.0.0",
     "@angular/core": "8.0.0",
@@ -28,6 +28,8 @@
     "jquery": "3.4.1",
     "oidc-client": "^1.9.0",
     "popper.js": "^1.14.3",
+    "primeicons": "^4.0.0-rc.2",
+    "primeng": "^9.1.0",
     "rxjs": "^6.4.0",
     "zone.js": "~0.9.1"
   },
