https://gitee.com/sdlfly2000/CorrectIt/issues/I1JO7E

--- a/Presentation.Mvc/Presentation.Mvc.csproj
+++ b/Presentation.Mvc/Presentation.Mvc.csproj
@@ -31,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="ClientApp\src\app\home\Models\question.model.ts" />
+    <None Remove="ClientApp\src\app\Services\Question\question.service.ts" />
   </ItemGroup>
 
   <ItemGroup>
@@ -43,7 +43,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <TypeScriptCompile Include="ClientApp\src\app\home\Models\question.model.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\Services\Question\Models\question.model.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\Services\Question\question.service.ts" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
