https://gitee.com/sdlfly2000/CorrectIt/issues/I1J4PR

--- a/WorkerService.Image.Receiver/appsettings.json
+++ b/WorkerService.Image.Receiver/appsettings.json
@@ -9,5 +9,8 @@
   "ConnectionStrings": {
     "CorrectIt": "Data Source=MS-201909281057\\SQLEXPRESS;Initial Catalog=CorrectIt;Persist Security Info=True;User ID=jayshi;Password=sdl@1215",
     "CorrectItWeb": "server=182.61.37.221;database=CorrectIt;uid=sdlfly2000;password=sdl@1215;"
+  },
+  "FeatureFlags": {
+    "ImageFileFolder": "Images/"
   }
 }
