https://gitee.com/sdlfly2000/CorrectIt/issues/I1J4PR

--- a/WorkerService.Image.Receiver/appsettings.json
+++ b/WorkerService.Image.Receiver/appsettings.json
@@ -11,6 +11,6 @@
     "CorrectItWeb": "server=182.61.37.221;database=CorrectIt;uid=sdlfly2000;password=sdl@1215;"
   },
   "FeatureFlags": {
-    "ImageFileFolder": "Images/"
+    "ImageFileFolder": "../Files/Images/"
   }
 }
