https://gitee.com/sdlfly2000/CorrectIt/issues/I1JSST

--- a/Presentation.Mvc/Presentation.Mvc.csproj
+++ b/Presentation.Mvc/Presentation.Mvc.csproj
@@ -31,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="ClientApp\src\app\Services\Question\question.service.ts" />
+    <None Remove="ClientApp\src\app\titleBar\titlebar.component.ts" />
   </ItemGroup>
 
   <ItemGroup>
@@ -43,8 +43,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <TypeScriptCompile Include="ClientApp\src\app\Services\Question\Models\question.model.ts" />
-    <TypeScriptCompile Include="ClientApp\src\app\Services\Question\question.service.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\mainPanel\Questions\Models\question.model.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\mainPanel\Questions\question.service.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\titleBar\titlebar.component.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ClientApp\src\app\navBar\" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
