--- a/Presentation.Mvc/ClientApp/angular.json
+++ b/Presentation.Mvc/ClientApp/angular.json
@@ -21,13 +21,16 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "./node_modules/@ant-design/icons-angular/src/inline-svg/",
+                "output": "/assets/"
+              }
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/primeng/resources/themes/nova-light/theme.css",
-              "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/primeicons/primeicons.css",
+              "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
+
               "src/styles.css"
             ],
             "scripts": []
@@ -77,9 +80,8 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "node_modules/primeng/resources/themes/nova-light/theme.css",
-              "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/primeicons/primeicons.css",
+              "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
+
               "styles.css"
             ],
             "scripts": [],
