--- a/Presentation.Mvc/ClientApp/package.json
+++ b/Presentation.Mvc/ClientApp/package.json
@@ -12,44 +12,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.0.0",
-    "@angular/common": "8.0.0",
-    "@angular/compiler": "8.0.0",
-    "@angular/core": "8.0.0",
-    "@angular/forms": "8.0.0",
-    "@angular/platform-browser": "8.0.0",
-    "@angular/platform-browser-dynamic": "8.0.0",
-    "@angular/platform-server": "8.0.0",
-    "@angular/router": "8.0.0",
+    "@angular/animations": "~9.1.9",
+    "@angular/common": "~9.1.9",
+    "@angular/compiler": "~9.1.9",
+    "@angular/core": "~9.1.9",
+    "@angular/forms": "~9.1.9",
+    "@angular/platform-browser": "~9.1.9",
+    "@angular/platform-browser-dynamic": "~9.1.9",
+    "@angular/platform-server": "~9.1.9",
+    "@angular/router": "~9.1.9",
     "@nguniversal/module-map-ngfactory-loader": "8.0.0-rc.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
     "jquery": "3.4.1",
+    "ng-zorro-antd": "^9.1.2",
     "oidc-client": "^1.9.0",
     "popper.js": "^1.14.3",
-    "primeicons": "^4.0.0-rc.2",
-    "primeng": "^9.1.0",
     "rxjs": "^6.4.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.800.6",
-    "@angular/cli": "8.0.6",
-    "@angular/compiler-cli": "8.0.0",
-    "@angular/language-service": "8.0.0",
-    "@types/jasmine": "~3.3.9",
-    "@types/jasminewd2": "~2.0.6",
+    "@angular-devkit/build-angular": "~0.901.7",
+    "@angular/cli": "~9.1.7",
+    "@angular/compiler-cli": "~9.1.9",
+    "@angular/language-service": "~9.1.9",
+    "@types/jasmine": "^3.3.16",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~11.10.5",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.0.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.5",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "typescript": "3.4.5"
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "typescript": "~3.8.3"
   },
   "optionalDependencies": {
     "node-sass": "^4.9.3",
