--- a/Presentation.Mvc/ClientApp/angular.json
+++ b/Presentation.Mvc/ClientApp/angular.json
@@ -29,8 +29,7 @@
               }
             ],
             "styles": [
-              "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
-
+              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
               "src/styles.css"
             ],
             "scripts": []
