--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Common.Core.Cache\Common.Core.Cache.csproj" />
+  </ItemGroup>
+
 </Project>
