--- a/Common.Core.Cache/Common.Core.Cache.csproj
+++ b/Common.Core.Cache/Common.Core.Cache.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Redis\" />
+  </ItemGroup>
+
 </Project>
