Basically complete Memory Cache

--- a/Presentation.Mvc/appsettings.json
+++ b/Presentation.Mvc/appsettings.json
@@ -12,5 +12,8 @@
   "FeatureFlags": {
     "ImageFileFolder": "../Files/Images/"
   },
+  "FeatureToggles": {
+    "IsMemoryCache": true 
+  }, 
   "AllowedHosts": "*"
 }
