--- a/Domain.Service/Domain.Services.csproj
+++ b/Domain.Service/Domain.Services.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Common.Core.AOP\Common.Core.AOP.csproj" />
     <ProjectReference Include="..\Common.Core.Cache\Common.Core.Cache.csproj" />
     <ProjectReference Include="..\Common.Core.DependencyInjection\Common.Core.DependencyInjection.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
