--- a/Common.Core.AOP/Common.Core.AOP.csproj
+++ b/Common.Core.AOP/Common.Core.AOP.csproj
@@ -3,5 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+  
+    <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
+  </ItemGroup>
+  
+    <ItemGroup>
+    <ProjectReference Include="..\Common.Core.DependencyInjection\Common.Core.DependencyInjection.csproj" />
+  </ItemGroup>
 
 </Project>
