--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Common.Core.AOP\Common.Core.AOP.csproj" />
     <ProjectReference Include="..\Common.Core.Cache\Common.Core.Cache.csproj" />
   </ItemGroup>
 
