--- a/Presentation.Mvc/Presentation.Mvc.csproj
+++ b/Presentation.Mvc/Presentation.Mvc.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\src\app\mainPanel\QuestionDetails\questiondetails.component.ts" />
     <None Remove="ClientApp\src\app\navHeader\navHeader.component.ts" />
   </ItemGroup>
 
@@ -43,6 +44,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\src\app\mainPanel\QuestionDetails\questiondetails.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\mainPanel\Questions\Models\question.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\mainPanel\Questions\question.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\navHeader\navHeader.component.ts" />
