--- a/Presentation.Mvc/ClientApp/angular.json
+++ b/Presentation.Mvc/ClientApp/angular.json
@@ -29,7 +29,7 @@
               }
             ],
             "styles": [
-              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
+              "node_modules/ng-zorro-antd/ng-zorro-antd.dark.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -79,8 +79,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
-
+              "node_modules/ng-zorro-antd/ng-zorro-antd.dark.css",
               "styles.css"
             ],
             "scripts": [],
